[package]
name = "arcode"
version = "0.1.2"
authors = ["Chris Burgess <cgburgess10@gmail.com>"]
description = "An Arithmetic Coder (lossless entropy encoder)"
edition = "2018"
homepage = "https://github.com/cgburgess/arithmetic-rs"
repository = "https://github.com/cgburgess/arithmetic-rs"
license = "MIT"
keywords = ["arithmetic", "coding", "entropy", "compression", "cabac"]
categories = ["compression", "algorithms", "encoding"]
readme = "README.md"
exclude = ["example/*"]

[dependencies]
bitbit = "0.2.0"
fenwick = "0.2.0"

#[[bin]]
#name = "example-bin"
#path = "example/example.rs"