[package]
name = "arcode"
version = "0.2.0"
authors = ["Chris Burgess <cgburgess10@gmail.com>"]
description = "An Arithmetic Coder (lossless entropy encoder)"
edition = "2018"
homepage = "https://github.com/cgburgess/arcode-rs"
repository = "https://github.com/cgburgess/arcode-rs"
license = "MIT"
keywords = ["arithmetic", "coding", "entropy", "compression", "lossless"]
categories = ["compression", "algorithms", "encoding"]
readme = "README.md"
exclude = ["example/*"]

[features]
binary = []

[dependencies]
bitbit = "0.2.0"
fenwick = "0.2.0"

#[[bin]]
#name = "example-bin"
#path = "example/example.rs"