[package]
name = "arcode"
version = "0.2.3"
authors = ["Chris Burgess <cgburgess10@gmail.com>"]
description = "An Arithmetic Coder (lossless entropy encoder)"
edition = "2018"
homepage = "https://github.com/cgburgess/arcode-rs"
repository = "https://github.com/cgburgess/arcode-rs"
license = "MIT"
keywords = ["arithmetic", "coding", "entropy", "compression", "lossless"]
categories = ["compression", "algorithms", "encoding"]
readme = "README.md"

[dependencies]
bitbit = "0.2.0"
fenwick = "1.0.0"

[dev-dependencies]
criterion = "0.3"
byte-unit = "4.0.9"

[[bench]]
name = "bench"
harness = false
